--- a/envoy.yaml
+++ b/envoy.yaml
@@ -56,3 +56,5 @@ static_resources:
           http3_protocol_options: {}
           http_filters:
           - name: envoy.filters.http.router
+            typed_config:
+              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
